js/js.translator/testData/incremental/invalidation/nonInlineBecomeInline/lib1/l1.2.kt
// TODO: After KT-51083, m.kt from main module must be dirty
inline fun foo() = 77
